# Algorithm-Real-Life

./: Cargo.toml  README.md
analisi_nutrizionale/: Cargo.toml  README.md
analisi_nutrizionale/src/: main.rs
antivirus/: Cargo.toml  README.md
app_dating/: Cargo.toml  README.md
app_dating/src/: main.rs
distributore-automatico/: Cargo.toml  README.md
distributore-automatico/src/: main.rs
paypal_flixbus/: Cargo.toml  README.md
paypal_flixbus/src/: main.rs
