[workspace]
resolver = "1"  # Se il tuo progetto è semplice e non hai problemi con le dipendenze, puoi scegliere di mantenere il resolver "1".

# Se vuoi sfruttare appieno le funzionalità di Rust 2021 e successive, o se incontri problemi con le dipendenze, dovresti passare al resolver "2".
# resolver = "2"

members = [ "analisi_nutrizionale", 
    "antivirus",
    "app_dating", 
    "distributore-automatico", 
    "paypal_flixbus",
]
